adding response status and not found handling