@@ -3,7 +3,11 @@ package com.example.service;
 import com.example.common.Product;
 import com.example.common.ProductRequest;
 import com.example.common.ProductResponse;
+import com.example.common.ProductResponseStatus;
 import com.example.repository.ProductRepository;
+import com.example.repository.RepositoryException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
@@ -13,6 +17,8 @@ import java.util.List;
 public class ProductServiceImpl implements ProductService {
 
     private final ProductRepository productRepository;
+
+    private final Logger LOGGER = LoggerFactory.getLogger(ProductServiceImpl.class);
 
     public ProductServiceImpl(ProductRepository productRepository) {
         this.productRepository = productRepository;
@@ -24,25 +30,41 @@ public class ProductServiceImpl implements ProductService {
             throw new IllegalArgumentException("ProductRequest action must not be null");
         }
 
-        switch (request.getAction()) {
-            case GET_ALL:
-                List<Product> all = findAll();
-                return new ProductResponse(all);
+        try {
+            switch (request.getAction()) {
+                case GET_ALL:
+                    List<Product> all = findAll();
+                    return new ProductResponse(ProductResponseStatus.OK, all);
 
-            case CREATE:
-                Product created = save(request.getProduct());
-                return new ProductResponse(created != null ? List.of(created) : Collections.emptyList());
+                case CREATE:
+                    Product created = save(request.getProduct());
+                    if(created != null){
+                        return new ProductResponse(ProductResponseStatus.CREATED, List.of(created));
+                    } else {
+                        return new ProductResponse(ProductResponseStatus.INTERNAL_SERVER_ERROR, Collections.emptyList());
+                    }
 
-            case DELETE_BY_ID:
-                deleteById(request.getProductId());
-                return new ProductResponse(Collections.emptyList());
+                case DELETE_BY_ID:
+                    boolean isDeleted = deleteById(request.getProductId());
+                    return new ProductResponse(isDeleted? ProductResponseStatus.OK : ProductResponseStatus.NOT_FOUND, Collections.emptyList());
 
-            case UPDATE_BY_ID:
-                Product updated = updateById(request.getProductId(), request.getProduct());
-                return new ProductResponse(List.of(updated));
+                case UPDATE_BY_ID:
+                    Product updated = updateById(request.getProductId(), request.getProduct());
+                    if(updated != null) {
+                        return new ProductResponse(ProductResponseStatus.OK, List.of(updated));
+                    } else {
+                        return new ProductResponse(ProductResponseStatus.NOT_FOUND, Collections.emptyList());
+                    }
 
-            default:
-                throw new IllegalArgumentException("Unsupported request type: " + request.getAction());
+                default:
+                    throw new IllegalArgumentException("Unsupported request type: " + request.getAction());
+            }
+        } catch (RepositoryException e) {
+            LOGGER.error("Repository error", e);
+            return new ProductResponse(ProductResponseStatus.INTERNAL_SERVER_ERROR, Collections.emptyList());
+        } catch (Exception e) {
+            LOGGER.error("Unexpected error", e);
+            return new ProductResponse(ProductResponseStatus.INTERNAL_SERVER_ERROR, Collections.emptyList());
         }
     }
 
@@ -62,7 +84,7 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public void deleteById(Long id) {
-        productRepository.deleteById(id);
+    public boolean deleteById(Long id) {
+        return productRepository.deleteById(id);
     }
 }
